--- a/src/global.css
+++ b/src/global.css
@@ -1,1 +1,33 @@
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap");
 
+:root {
+	--color-black: #161616;
+	--color-black-light-1: #535050;
+}
+
+*,
+*::before,
+*::after {
+	padding: 0;
+	margin: 0;
+	box-sizing: inherit;
+}
+
+html {
+	font-size: 62.5%;
+	box-sizing: border-box;
+}
+
+body {
+	background-color: #fff;
+	color: var(--color-black);
+	font-family: "Lato", sans-serif;
+	font-size: 1.5rem;
+	font-weight: 400;
+}
+
+#root {
+	display: grid;
+	grid-template-rows: auto;
+	grid-template-columns: [full-start] 1fr [content-start] 1320px [content-end] 1fr [full-end];
+}
