--- a/src/components/movies/MovieItem/MovieItem.module.css
+++ b/src/components/movies/MovieItem/MovieItem.module.css
@@ -10,9 +10,7 @@
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-}
 
-.movie-item__info-row {
 	margin-bottom: 2rem;
 }
 
@@ -32,7 +30,7 @@
 	font-size: 1.4rem;
 }
 
-.movie-item__watchlist-btn {
+.movie-item__btn {
 	width: 100%;
 	display: block;
 	background-color: var(--color-blue);
@@ -42,18 +40,18 @@
 	padding: 1rem;
 	border-radius: 3px;
 	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25);
-	transition: all 0.3s;
+	transition: all 0.2s;
 }
 
-.movie-item__watchlist-btn:focus {
+.movie-item__btn:focus {
 	outline: none;
 }
 
-.movie-item__watchlist-btn:hover {
+.movie-item__btn:hover {
 	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.25);
 	transform: translateY(-2px);
 }
 
-.movie-item__watchlist-btn:active {
+.movie-item__btn:active {
 	transform: translateY(0);
 }
