--- a/src/global.css
+++ b/src/global.css
@@ -6,6 +6,7 @@
 	--color-black-light-2: #7e7a7a;
 
 	--color-blue: #4d6de3;
+	--color-blue-light-1: #c2cdf5;
 }
 
 *,
@@ -31,6 +32,5 @@ body {
 
 #root {
 	display: grid;
-	grid-template-rows: auto;
 	grid-template-columns: [full-start] 1fr [content-start] 1320px [content-end] 1fr [full-end];
 }
