--- a/src/components/layout/Navigation/Navigation.module.css
+++ b/src/components/layout/Navigation/Navigation.module.css
@@ -89,6 +89,18 @@
 }
 
 @media only screen and (max-width: 576px) {
+	.navigation__logo-link {
+		font-size: 2rem;
+	}
+
+	.navigation__nav ul li:not(:last-child) {
+		margin-right: 1rem;
+	}
+
+	.navigation__link {
+		font-size: 1.6rem;
+	}
+
 	.navigation__search {
 		display: none;
 	}
