--- a/src/components/movies/SearchMovie/SearchMovie.module.css
+++ b/src/components/movies/SearchMovie/SearchMovie.module.css
@@ -21,6 +21,7 @@
 	max-width: 100%;
 	height: 3rem;
 	font: inherit;
+	font-size: 1.8rem;
 	border: none;
 	border-bottom: 1px solid var(--color-black);
 }
@@ -36,5 +37,11 @@
 @media only screen and (max-width: 576px) {
 	.search-movie {
 		display: flex;
+	}
+}
+
+@media only screen and (max-width: 400px) {
+	.search-movie input {
+		font-size: 1.6rem;
 	}
 }
