--- a/src/components/layout/MediaCard/MediaCard.module.css
+++ b/src/components/layout/MediaCard/MediaCard.module.css
@@ -9,10 +9,16 @@
 	height: 42.5rem;
 }
 
-.media-card__figure img {
+.media-card__image {
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
+}
+
+.media-card__no-image {
+	width: 10rem;
+	display: block;
+	margin: 0 auto;
 }
 
 .media-card__content {
@@ -22,6 +28,10 @@
 @media only screen and (max-width: 1400px) {
 	.media-card__figure {
 		height: 37.5rem;
+	}
+
+	.media-card__no-image {
+		width: 8rem;
 	}
 }
 
@@ -47,16 +57,28 @@
 	.media-card__figure {
 		height: 67.5rem;
 	}
+
+	.media-card__no-image {
+		width: 12rem;
+	}
 }
 
 @media only screen and (max-width: 400px) {
 	.media-card__figure {
 		height: 52.5rem;
 	}
+
+	.media-card__no-image {
+		width: 10rem;
+	}
 }
 
 @media only screen and (max-width: 320px) {
 	.media-card__figure {
 		height: 42.5rem;
+	}
+
+	.media-card__no-image {
+		width: 8rem;
 	}
 }
