--- a/src/components/movies/MovieItem/MovieItem.module.css
+++ b/src/components/movies/MovieItem/MovieItem.module.css
@@ -1,6 +1,38 @@
 .movie-item__card {
+	display: flex;
+	flex-direction: column;
+
 	height: 100%;
 	font-size: 1.6rem;
+	border-radius: 5px;
+	box-shadow: 0 2px 6px rgba(0, 0, 0, 0.25);
+	overflow: hidden;
+}
+
+.movie-item__figure {
+	width: 100%;
+	height: 42.5rem;
+}
+
+.movie-item__image {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+}
+
+.movie-item__no-image {
+	width: 10rem;
+	display: block;
+	margin: 0 auto;
+}
+
+.movie-item__content {
+	display: flex;
+	flex-direction: column;
+
+	padding: 2rem 1rem;
+
+	flex-grow: 1;
 }
 
 .movie-item__info-row {
@@ -39,6 +71,7 @@
 	padding: 1rem;
 	border: none;
 	border-radius: 3px;
+	margin-top: auto;
 	cursor: pointer;
 	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25);
 	transition: all 0.2s;
@@ -57,14 +90,68 @@
 	transform: translateY(0);
 }
 
+@media only screen and (max-width: 1400px) {
+	.movie-item__figure {
+		height: 37.5rem;
+	}
+
+	.movie-item__no-image {
+		width: 8rem;
+	}
+}
+
+@media only screen and (max-width: 1200px) {
+	.movie-item__figure {
+		height: 42.5rem;
+	}
+}
+
 @media only screen and (max-width: 992px) {
 	.movie-item__card {
 		font-size: 1.8rem;
+	}
+
+	.movie-item__figure {
+		height: 38.5rem;
+	}
+}
+
+@media only screen and (max-width: 768px) {
+	.movie-item__figure {
+		height: 43.5rem;
+	}
+}
+
+@media only screen and (max-width: 576px) {
+	.movie-item__figure {
+		height: 67.5rem;
+	}
+
+	.movie-item__no-image {
+		width: 12rem;
 	}
 }
 
 @media only screen and (max-width: 400px) {
 	.movie-item__card {
 		font-size: 1.6rem;
+	}
+
+	.movie-item__figure {
+		height: 52.5rem;
+	}
+
+	.movie-item__no-image {
+		width: 10rem;
+	}
+}
+
+@media only screen and (max-width: 320px) {
+	.movie-item__figure {
+		height: 42.5rem;
+	}
+
+	.movie-item__no-image {
+		width: 8rem;
 	}
 }
