--- a/src/components/movies/MovieDetail/MovieDetail.module.css
+++ b/src/components/movies/MovieDetail/MovieDetail.module.css
@@ -1,15 +1,64 @@
 .movie-detail {
 	display: flex;
-	align-items: center;
+	align-items: flex-start;
 
 	margin-bottom: 5rem;
 }
 
-.movie-detail__figure {
+.movie-detail__card {
+	border-radius: 5px;
 	margin-right: 5rem;
+	box-shadow: 0 2px 6px rgba(0, 0, 0, 0.25);
 	overflow: hidden;
 
 	flex-basis: 30%;
+}
+
+.movie-detail__card-figure--no-image {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+
+	height: 50rem;
+}
+
+.movie-detail__card-figure img {
+	width: 100%;
+}
+
+.movie-detail__card-figure--no-image img {
+	width: 10rem;
+}
+
+.movie-detail__card-actions {
+	padding: 2rem 1rem;
+}
+
+.movie-detail__btn {
+	width: 100%;
+	display: block;
+	background-color: var(--color-blue);
+	color: #fff;
+	font: inherit;
+	padding: 1rem;
+	border: none;
+	border-radius: 3px;
+	cursor: pointer;
+	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25);
+	transition: all 0.2s;
+}
+
+.movie-detail__btn:focus {
+	outline: none;
+}
+
+.movie-detail__btn:hover {
+	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.25);
+	transform: translateY(-2px);
+}
+
+.movie-detail__btn:active {
+	transform: translateY(0);
 }
 
 .movie-detail__info {
