--- a/src/components/providers/ProvidersList/ProvidersList.module.css
+++ b/src/components/providers/ProvidersList/ProvidersList.module.css
@@ -37,11 +37,6 @@
 		font-size: 2rem;
 	}
 
-	.providers-list__spinner svg {
-		width: 3.5rem;
-		height: 3.5rem;
-	}
-
 	.providers-list__message svg {
 		width: 4.5rem;
 		height: 4.5rem;
@@ -49,5 +44,25 @@
 
 	.providers-list__message p {
 		font-size: 1.8rem;
+	}
+}
+
+@media only screen and (max-width: 400px) {
+	.providers-list p {
+		font-size: 1.8rem;
+	}
+
+	.providers-list__spinner svg {
+		width: 3.5rem;
+		height: 3.5rem;
+	}
+
+	.providers-list__message svg {
+		width: 4rem;
+		height: 4rem;
+	}
+
+	.providers-list__message p {
+		font-size: 1.6rem;
 	}
 }
