--- a/src/components/movies/MovieItem/MovieItem.module.css
+++ b/src/components/movies/MovieItem/MovieItem.module.css
@@ -81,13 +81,15 @@
 	outline: none;
 }
 
-.movie-item__btn:hover {
-	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.25);
-	transform: translateY(-2px);
-}
+@media (hover: hover) {
+	.movie-item__btn:hover {
+		box-shadow: 0 4px 8px rgba(0, 0, 0, 0.25);
+		transform: translateY(-2px);
+	}
 
-.movie-item__btn:active {
-	transform: translateY(0);
+	.movie-item__btn:active {
+		transform: translateY(0);
+	}
 }
 
 @media only screen and (max-width: 1400px) {
