--- a/src/components/movies/MovieItem/MovieItem.module.css
+++ b/src/components/movies/MovieItem/MovieItem.module.css
@@ -65,8 +65,6 @@
 .movie-item__btn {
 	width: 100%;
 	display: block;
-	background-color: var(--color-blue);
-	color: #fff;
 	font: inherit;
 	padding: 1rem;
 	border: none;
@@ -75,6 +73,17 @@
 	cursor: pointer;
 	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25);
 	transition: all 0.2s;
+}
+
+.movie-item__btn--add {
+	background-color: var(--color-blue);
+	color: #fff;
+}
+
+.movie-item__btn--remove {
+	background-color: #fff;
+	color: var(--color-blue);
+	border: 2px solid var(--color-blue);
 }
 
 .movie-item__btn:focus {
