--- a/src/pages/WatchListPage/WatchListPage.module.css
+++ b/src/pages/WatchListPage/WatchListPage.module.css
@@ -3,3 +3,53 @@
 
 	grid-column: content-start / content-end;
 }
+
+.watchlist-page__top {
+	display: flex;
+	justify-content: flex-end;
+
+	margin-bottom: 5rem;
+}
+
+.watchlist-page__top button {
+	display: block;
+	background-color: var(--color-blue);
+	color: #fff;
+	font: inherit;
+	padding: 1rem;
+	border: none;
+	border-radius: 3px;
+	cursor: pointer;
+	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25);
+	transition: all 0.2s;
+}
+
+@media (hover: hover) {
+	.watchlist-page__top button:hover {
+		box-shadow: 0 4px 8px rgba(0, 0, 0, 0.25);
+		transform: translateY(-2px);
+	}
+
+	.watchlist-page__top button:active {
+		box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25);
+		transform: translateY(0);
+	}
+}
+
+@media only screen and (max-width: 992px) {
+	.watchlist-page__top button {
+		font-size: 1.8rem;
+	}
+}
+
+@media only screen and (max-width: 576px) {
+	.watchlist-page__top {
+		justify-content: center;
+	}
+}
+
+@media only screen and (max-width: 400px) {
+	.watchlist-page__top button {
+		font-size: 1.6rem;
+	}
+}
