--- a/src/pages/MoviesPage/MoviesPage.module.css
+++ b/src/pages/MoviesPage/MoviesPage.module.css
@@ -3,3 +3,33 @@
 
 	grid-column: content-start / content-end;
 }
+
+.movies-page__top {
+	display: flex;
+	justify-content: space-between;
+
+	font-size: 1.7rem;
+	margin-bottom: 5rem;
+}
+
+.movies-page__select-type {
+	display: flex;
+	align-items: center;
+}
+
+.movies-page__select-type label {
+	font-weight: 700;
+	margin-right: 1rem;
+}
+
+.movies-page__select-type select {
+	width: 12.5rem;
+	font: inherit;
+	padding: 0.5rem;
+	border: 1px solid var(--color-black);
+	border-radius: 3px;
+}
+
+.movies-page__select-type select:focus {
+	outline: none;
+}
