--- a/src/pages/MoviesPage/MoviesPage.module.css
+++ b/src/pages/MoviesPage/MoviesPage.module.css
@@ -45,3 +45,14 @@
 .movies-page__select-genre select:focus {
 	outline: 1px solid var(--color-black);
 }
+
+@media only screen and (max-width: 400px) {
+	.movies-page__top {
+		flex-direction: column;
+		align-items: center;
+	}
+
+	.movies-page__select-type {
+		margin-bottom: 2rem;
+	}
+}
